src/objects/TASKRAY__trContributor__c.object
<CustomObject>
    <description>This is a TaskRay &quot;behind the scenes&quot; object that stores project team members.</description>
    <fields>
        <fullName>TASKRAY__GroupId__c</fullName>
        <description>The Id for a salesforce group, unfortunately lookup relationships to groups are not available</description>
        <label>Group Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project__c</fullName>
        <label>TaskRay Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>TaskRay Team</relationshipLabel>
        <relationshipName>TaskRay_Contributors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TASKRAY__UserOrGroupId__c</fullName>
        <formula>IF(TASKRAY__GroupId__c != NULL, CASESAFEID(TASKRAY__GroupId__c), CASESAFEID(TASKRAY__User__c))</formula>
        <label>User or Group Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Contributors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trAddedBySharingRule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Added by Sharing Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trInitialAccessLevel__c</fullName>
        <description>The initial access for a contributor. Only applies with projects set to private and on creation of share.</description>
        <label>Initial Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Edit</fullName>
                    <color>#DDDDDD</color>
                    <default>true</default>
                    <label>Edit</label>
                </value>
                <value>
                    <fullName>Read</fullName>
                    <color>#CC6600</color>
                    <label>Read</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectMemberKey__c</fullName>
        <externalId>true</externalId>
        <label>Project Member Key</label>
        <length>37</length>
        <type>Text</type>
    </fields>
    <label>TaskRay Team</label>
    <listViews>
        <fullName>TASKRAY__All</fullName>
        <columns>NAME</columns>
        <columns>TASKRAY__Project__c</columns>
        <columns>TASKRAY__UserOrGroupId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All TaskRay Team Members</label>
    </listViews>
    <nameField>
        <label>TaskRay Team Member</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TASKRAY__Require_User_Or_Group</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TASKRAY__User__c) &amp;&amp; ISBLANK(TASKRAY__GroupId__c)</errorConditionFormula>
        <errorMessage>Team members must be associated with a User or Group Id.</errorMessage>
    </validationRules>
</CustomObject>